# test-sphinx

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  modules.rst  test_sphinx.rst
test-sphinx/: main.py
test_sphinx/: __init__.py  m1.py  main.py
