[project]
name = "test-sphinx"
version = "0.0.1"
description = "Test Sphinx"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "myst-parser>=4.0.1",
    "numpydoc>=1.8.0",
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2024.10.3",
]

[tool.uv]
default-groups = []

[tool.numpydoc_validation]
checks = [
    "GL01",
    "GL02",
    "GL03",
    "GL05",
    "GL06",
    "GL07",
    "GL08",
    "GL09",
    "GL10",
    "SS01",
#    "SS02",
#    "SS03",
    "SS04",
    "SS05",
    "SS06",
    "PR01",
    "PR02",
    "PR03",
    "PR04",
    "PR05",
    "PR06",
    "PR07",
    "PR08",
    "PR09",
    "PR10",
    "RT01",
    "RT02",
    "RT03",
    "RT04",
    "RT05",
    "YD01",
    "SA02",
    "SA03",
    "SA04",
]